welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:11: error: not found: value indexofMaxValue
    var t = indexofMaxValue(nums)   
            ^