welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var x = -100
  var y = 0
  for(i <- 0 to nums.length -1){
    if(x <= nums(i)){
      y = x
      x = nums(i)
    }
  }
  if (x == y){
    var t = indexofMaxValue(nums)   
  }
  return y
}

def indexOfMaxValue(nums:Array[Int]):Int = {
  var x = nums(0)
  var y = 0
  for(i <- 0 to nums.length -1){
    if(x < nums(i)){
      x = nums(i)
      y = i
    }
  }
  return y
}